--- a/ops-test-1/Dockerfile
+++ b/ops-test-1/Dockerfile
@@ -1,11 +1,24 @@
-FROM python:3.11-slim
+# Use official Python slim image for smaller size
+FROM python:3.9-slim
 
-WORKDIR /src
+# Set working directory
+WORKDIR /app
 
-COPY app .
-RUN pip install -r requirements.txt
+# Copy requirements first for better caching
+COPY app/requirements.txt .
 
-EXPOSE 80
+# Install dependencies
+RUN pip install --no-cache-dir -r requirements.txt
 
+# Copy application code
+COPY app/ .
+
+# Create non-root user for security
+RUN useradd -m appuser && chown -R appuser:appuser /app
+USER appuser
+
+# Expose port
+EXPOSE 8080
+
+# Run the application
 CMD ["python", "main.py"]
-
