--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,5 +1,4 @@
 
-# .github/workflows/ci.yml
 name: CI Pipeline
 
 on:
@@ -24,13 +23,13 @@ jobs:
       - name: Install Dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install -r app/requirements.txt
+          pip install -r ops-test-1/app/requirements.txt
 
       - name: Python Syntax Check
-        run: python -m py_compile app/main.py
+        run: python -m py_compile ops-test-1/app/main.py
 
       - name: Build Docker Image
-        run: docker build -t sre-assessment:latest .
+        run: docker build -t sre-assessment:latest ops-test-1
 
       - name: Run Docker Container in Background
         run: |
@@ -39,23 +38,21 @@ jobs:
 
       - name: Test /healthz Endpoint
         run: |
-          curl -f http://localhost:8080/healthz
+          curl -sf http://localhost:8080/healthz
           echo "Health check passed!"
 
       - name: Test Root Endpoint
         run: |
-          curl -f http://localhost:8080/
+          curl -sf http://localhost:8080/
           echo "Root endpoint passed!"
 
-      - name: Stop & Remove Container
+      - name: Stop & Remove Container (always)
         if: always()
         run: |
           docker stop sre-test || true
           docker rm sre-test || true
 
-      # -----------------------
       # Optional: Push to Docker Hub
-      # -----------------------
       # - name: Login to Docker Hub
       #   uses: docker/login-action@v3
       #   with:
