--- a/ops-test-2/k8s/hpa.yaml
+++ b/ops-test-2/k8s/hpa.yaml
@@ -1,18 +1,18 @@
 apiVersion: autoscaling/v2
 kind: HorizontalPodAutoscaler
 metadata:
-  name: advanced-hpa
+  name: sre-app-hpa
 spec:
   scaleTargetRef:
     apiVersion: apps/v1
     kind: Deployment
-    name: advanced-app
+    name: sre-app
   minReplicas: 1
-  maxReplicas: 10
+  maxReplicas: 5
   metrics:
   - type: Resource
     resource:
       name: cpu
       target:
-        type: Value
-        value: 500m
+        type: Utilization
+        averageUtilization: 50
