--- a/ops-test-2/k8s/service.yaml
+++ b/ops-test-2/k8s/service.yaml
@@ -1,12 +1,14 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: test2-app-service
+  name: sre-app
+  labels:
+    app: sre-app
 spec:
-  selector:
-    app: test2-app
-  ports:
-    - name: http
-      port: 80
-      targetPort: 8080
   type: ClusterIP
+  selector:
+    app: sre-app
+  ports:
+  - name: http
+    port: 80
+    targetPort: 8080
