--- a/ops-test-2/k8s/deployment.yaml
+++ b/ops-test-2/k8s/deployment.yaml
@@ -37,7 +37,7 @@ spec:
             cpu: "500m"
 
       - name: sidecar
-        image: emon110852/sidecar:latest   # change if needed
+        image: emon110852/sidecar:latest   
         imagePullPolicy: Always
         ports:
         - containerPort: 8081
